<resources>
    <string name="app_name">DANDI</string>
    <string name="app_name2">늦지말고, 단디</string>
    <string name="help"><b><u>도움이 필요하세요? | About 단디</u></b></string>
    <string name="beginning">&lt;  처음으로</string>
    <string name="textview6"><b>돌아온걸 환영해요 😄</b></string>
    <string name="textview7"><h3><b>로그인</b></h3></string>
    <string name="ID"><h3><b>ID</b></h3></string>
    <string name="PW"><h3><b>Password</b></h3></string>
    <string name="start"><h3><b>시작하기</b></h3></string>
    <string name="autoLogin"><h3><b>자동 로그인</b></h3></string>
    <string name="forget"><h3><b>계정이 기억나지 않는다면?</b></h3></string>
    <string name="confirm"><h3><b>계정 정보 확인</b></h3></string>
    <string name="noAccount"><h3><b>계정이 없다면?</b></h3></string>
    <string name="join"><h3><b>회원가입</b></h3></string>
    <string name="saveID"><h3><b>아이디 저장</b></h3></string>
    <string name="tutorial"><h3><b>튜토리얼 시작하기</b></h3></string>
    <string name="tutorial_text"><h3><b>지금까지의 경험을 기반으로 첫 약속에 준비하세요.\n첫 실행 이후에는 단디가 최적의 시간들을\n안내할게요. 지금 약속이 없다면\n건너뛰고 다음에 해도 좋아요.</b></h3></string>
    <string name="first"><h3><b>첫 준비 시작</b></h3></string>
    <string name="howto"><h3><b>어떤 식으로 진행되는지 알고 싶어요.</b></h3></string>
    <string name="skip"><h3><b>건너뛰기  &gt;</b></h3></string>
    <string name="back">&lt;  이전</string>
    <string name="next"><h3><b>다음  &gt;</b></h3></string>
    <string name="setArrival">목표 도착시간 설정</string>
    <string name="setArrival_text1">일정의 날짜와 목표 도착시간을 설정해주세요.\n실제 목표 시간보다 10분 전으로 설정하길 추천해요.</string>
    <string name="setArrival_text2">추가로 반복되는 일과인지 설정해주세요.\n해당 일정은 약속관리 탭에서 확인할 수 있어요.</string>
    <string name="selectSchedule">일정 선택</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>
    <string name="setTime">시작 시간 설정</string>
    <string name="setTime_text1">지금까지의 경험을 토대로 \n준비 시작 시간을 정해주세요.</string>
    <string name="setTime_text2">추가로 알람 기능 관련도 설정해주세요.</string>
    <string name="startTime">시작 시간</string>
    <string name="setStart">시작 알림 설정</string>
    <string name="alarm">알림 유무</string>
    <string name="repeat">반복 알림</string>
    <string name="setsound">알림음 설정</string>
    <string name="info_confirm">등록 정보 확인</string>
    <string name="info_confirm2">기록된 사항들을 요약해서 보여줄게요. \n 잘못된 부분이 있으면 돌아가 수정해주세요.</string>
    <string name="info_confirm3">알림을 끄거나 팝업에 반응하는 행위를 통해\n 실제 준비 과정을 추적할 예정입니다. \n 관련 정보는 여기서 확인해주세요.</string>
    <string name="home_m_sched">이번 달 월간 스케줄</string>
    <string name="home_click">클릭 시 자세히 볼 수 있어요</string>
    <string name="quick_sched">일정 빠른 생성</string>
    <string name="man_sched">일정 관리</string>
    <string name="man_routin">루틴 관리</string>
    <string name="man_alarm">알람 관리</string>
    <string name="recent">최근 기록</string>
    <string name="man_sched_text">일정을 확인하고 관리해요</string>
    <string name="daily">일간</string>
    <string name="weekly">주간</string>
    <string name="monthly">월간</string>
    <string name="now_add">지금 일정을 추가해보세요</string>
    <string name="date_example">2022년 7월</string>
    <string name="preparation_setting">준비 과정 설정</string>
    <string name="preparation_setting2">지금까지의 경험을 토대로 \n 외출 준비 과정과 소요 시간을 설정하세요. \n 목록에서 선택하여 루틴으로 연결하거나 \n 마음대로 작성할 수 있어요. \n 준비된 루틴에는 개성있는 알림도 있어요.</string>
    <string name="recent_record">최근 기록</string>
    <string name="recent_info">지난 일정들의 정보를 확인하고 최적의 소요시간을 찾아보세요</string>
    <string name="click_res">클릭 시 해당 일정의 결과를 표시해요</string>
    <string name="info_routin">루틴 정보 바로가기></string>
    <string name="past_sched">지난 일정</string>
    <string name="shortcuts">바로가기></string>
    <string name="stats_service">통계 서비스</string>
    <string name="stats_service2">지금까지 데이터로 최적의 소요시간을 탐색하세요</string>
    <string name="info_man_routin">저장된 루틴을 확인하고 관리해요</string>
    <string name="saved_routin">저장된 루틴</string>
    <string name="set_ready">준비 과정 설정</string>
    <string name="info_set_ready">지금까지의 경험을 토대로\n외출 준비 과정과 소요시간을 설정하세요.\n목록에서 선택하여 루틴으로 연결하거나\n마음대로 작성할 수 있어요.\n준비된 루틴에는 개성있는 알림도 있어요.</string>
    <string name="set_routin">루틴 설정</string>
    <string name="go_home">&lt; 홈으로</string>
</resources>