<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4">

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/app_name2"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="420dp"
        android:layout_height="676dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/bg_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" >

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_record"
            android:textColor="#474343"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="34dp" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_info"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="82dp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="325dp"
            android:layout_height="42dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/bg_custom_button"
            android:text="@string/past_sched"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button19"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="48dp" />

        <Button
            android:id="@+id/button19"
            android:layout_width="325dp"
            android:layout_height="42dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/bg_custom_button"
            android:text="@string/past_sched"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button20"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="47dp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="325dp"
            android:layout_height="42dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/bg_custom_button"
            android:text="@string/past_sched"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView43"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
            tools:layout_editor_absoluteX="47dp" />

        <ProgressBar
            android:id="@+id/progressBar8"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="108dp" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/click_res"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button15"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/info_routin"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/button15"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="272dp" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/stats_service"
            android:textColor="#2196F3"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/textView44"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_service2"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="395dp" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shortcuts"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="321dp"
            tools:layout_editor_absoluteY="395dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>